--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ author_bio: >-
   Alberta. I've recently compeleted a Full Stack Developer Program at EvolveU, 
   and I'm looking to help those that need web development work done, or 
   searching for ideas and management for their next content project.
+
+  Prueba de David
 author_pic: https://brennanbrown.ca/img/avatar.png
 paginate: 4
 paginate_path: "/:num/"
